# odom_lio2

./: .gitignore  README.md  plan.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/fast_lio/include/fast_lio/fast_lio/msg/: pose6_d.h  pose6_d.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/fast_lio/lib/fast_lio/: fastlio_mapping
install/fast_lio/share/ament_index/resource_index/package_run_dependencies/: fast_lio
install/fast_lio/share/ament_index/resource_index/parent_prefix_path/: fast_lio
install/fast_lio/share/ament_index/resource_index/rosidl_interfaces/: fast_lio
install/fast_lio/share/ament_index/resource_index/rust_packages/: fast_lio
install/fast_lio/share/fast_lio/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/fast_lio/share/fast_lio/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  fast_lioConfig-version.cmake  fast_lioConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/fast_lio/share/fast_lio/config/: avia.yaml  horizon.yaml  mid360.yaml  ouster64.yaml  velodyne.yaml
install/fast_lio/share/fast_lio/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/fast_lio/share/fast_lio/launch/: gdb_debug_example.launch  mapping.launch.py  odom_only.launch.py
install/fast_lio/share/fast_lio/msg/: Pose6D.idl  Pose6D.msg
install/fast_lio/share/fast_lio/rust/: Cargo.toml  build.rs
install/fast_lio/share/fast_lio/rust/src/: lib.rs  msg.rs
install/fast_lio/share/fast_lio/rviz/: fastlio.rviz
install/lio_odom/lib/lio_odom/: odom_transformer
install/lio_odom/share/ament_index/resource_index/package_run_dependencies/: lio_odom
install/lio_odom/share/lio_odom/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lio_odom/share/lio_odom/cmake/: lio_odomConfig-version.cmake  lio_odomConfig.cmake
install/lio_odom/share/lio_odom/config/: fast_lio_minimal.yaml  odom_transformer.yaml
install/lio_odom/share/lio_odom/environment/: ament_prefix_path.dsv  path.dsv
install/lio_odom/share/lio_odom/launch/: fast_lio_with_odom.launch.py  minimal_odom.launch.py  odom_transformer.launch.py
log/: latest_build
src/LIO_loop/: CMakeLists.txt  README.md  package.xml
src/LIO_loop/include/LIO_loop/: keyframe.hpp  loop_closure_node.hpp  scan_context.hpp
src/LIO_loop/launch/: loop_closure.launch.py  mapping_with_loop.launch.py
src/LIO_loop/src/: loop_closure_node.cpp  pose_graph.cpp  scan_context.cpp
src/LIO_odom/: CMakeLists.txt  README.md
src/LIO_odom/config/: fast_lio_minimal.yaml  odom_transformer.yaml
src/LIO_odom/launch/: fast_lio_with_odom.launch.py  minimal_odom.launch.py  odom_transformer.launch.py
src/LIO_odom/src/: odom_transformer_node.cpp
src/fast_lio_loop/: CMakeLists.txt  README.md  package.xml
src/fast_lio_loop/config/: loop_closure.yaml
src/fast_lio_loop/include/fast_lio_loop/: loop_closure_node.hpp  pose_graph.hpp
src/fast_lio_loop/launch/: loop_closure.launch.py
src/fast_lio_loop/src/: loop_closure_node.cpp  pose_graph.cpp  scan_context.cpp
(+24 files in other folders)
